feat: add new is{attribute} system and remove data- from attributtes

--- a/src/test1.html
+++ b/src/test1.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <textarea id="textArea" data-collection="apples" data-document_id="603ffc2dc975bd2c3cfe6b5f" name='html2' style="height:300px; width:100%;"></textarea>
+    <textarea id="textArea" collection="apples" document_id="603ffc2dc975bd2c3cfe6b5f" name='html2' style="height:300px; width:100%;"></textarea>
   
     <script>
         var config = {
