fix: rename data-element_id to element_id

--- a/src/testpage.html
+++ b/src/testpage.html
@@ -5,12 +5,12 @@
 </head>
 
 <body style="padding:1;">
-    <div data-element_id="main">
+    <div element_id="main">
 
-        <h1 data-element_id="t1" name="1">test 1</h1>
-        <h1 data-element_id="t3" name="3">test 3</h1>
-        <h1 data-element_id="t2" name="2">test 2</h1>
-        <h1 data-element_id="t4" name="4">test 4</h1>
+        <h1 element_id="t1" name="1">test 1</h1>
+        <h1 element_id="t3" name="3">test 3</h1>
+        <h1 element_id="t2" name="2">test 2</h1>
+        <h1 element_id="t4" name="4">test 4</h1>
 
 
     </div>
