--- a/src/test-index.html
+++ b/src/test-index.html
@@ -2,14 +2,14 @@
 	<head>
 	</head>
 	<body style="padding:1;">
-	<div data-element_id="main" >
+	<div element_id="main" >
 	
-		<h1 data-element_id="t1" name="1">test 1</h1>
-		<h1 data-element_id="t3" name="3">test 3</h1>
-		<h1 data-element_id="t2" name="2">test 2</h1>
-		<h1 data-element_id="t4" name="4">test 4</h1>
+		<h1 element_id="t1" name="1">test 1</h1>
+		<h1 element_id="t3" name="3">test 3</h1>
+		<h1 element_id="t2" name="2">test 2</h1>
+		<h1 element_id="t4" name="4">test 4</h1>
 			
-        <script data-element_id="script1">
+        <script element_id="script1">
             var config = {
               apiKey: 'c2b08663-06e3-440c-ef6f-13978b42883a',
               securityKey: 'f26baf68-e3a9-45fc-effe-502e47116265',
